# refu

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.MD  SConstruct  readme.org  test.sh
.travis/: install.sh  run_tests.sh
build_script/: build.py  cleanup.py  clib.py  options.py
build_script/tools/: dot.py  dot_builder.py
cmake/: CreateGperfHeader.cmake  FindGperf.cmake  FindGraphViz.cmake  RFRefuConfig.cmake  RFTargetSources.cmake  RFUseLLVM.cmake
docs/: Makefile  abnf.org  conf.py  getting_started.rst  index.rst  make.bat  reference.rst  spec.org  spec.rst
include/: argparser.h  ast.h  compiler.h  compiler_args.h  compiler_globals.h  front_ctx.h  inpfile.h  inplocation.h  inpoffset.h  inpstr.h  lexer.h  messaging.h  module.h  parser.h
include/analyzer/: analyzer.h  string_table.h  symbol_table.h  type_set.h  typecheck.h  typecheck_arr.h  typecheck_forexpr.h  typecheck_functions.h  typecheck_matchexpr.h  typecheck_typeclass.h  types.h
include/ast/: argument.h  arr.h  arr_decls.h  arrayref.h  arrayref_decls.h  ast.h  ast_utils.h  block.h  block_decls.h  constant_num.h  constant_num_decls.h  constants.h  constants_decls.h  datadecl.h  fndecl.h  forexpr.h  forexpr_decls.h  function.h  function_decls.h  (+29 more)
lib/: CMakeLists.txt
src/: CMakeLists.txt  argparser.c  ast.c  compiler.c  compiler_args.c  compiler_globals.c  front_ctx.c  inpfile.c  inplocation.c  inpoffset.c  inpstr.c  main.c  messaging.c  module.c  parser.c
src/analyzer/: CMakeLists.txt  analyzer.c  analyzer_pass1.c  analyzer_pass1.h  analyzer_utils.c  analyzer_utils.h  builtin_types_htable.gperf  global_context.c  global_context.h  string_table.c  symbol_table.c  symbol_table_creation.c  symbol_table_creation.h  type_set.c  typecheck.c  typecheck_arr.c  typecheck_forexpr.c  typecheck_functions.c  typecheck_matchexpr.c  typecheck_matchexpr.h  typecheck_typeclass.c  types.c
src/ast/: CMakeLists.txt  argument.c  arr.c  arrayref.c  ast.c  ast_type_traversal.c  ast_utils.c  block.c  constant_num.c  constants.c  datadecl.c  fndecl.c  forexpr.c  function.c  generics.c  genrdecl.c  identifier.c  ifexpr.c  import.c  iterable.c  location.c  matchexpr.c  module.c  operators.c  returnstmt.c  string_literal.c  type.c  typeclass.c  typedecl.c  typedesc.c  vardecl.c
src/backend/: CMakeLists.txt  llvm.c  llvm_arrays.c  llvm_arrays.h  llvm_ast.c  llvm_ast.h  llvm_conversion.c  llvm_conversion.h  llvm_functions.c  llvm_functions.h  llvm_globals.c  llvm_globals.h  llvm_matchexpr.c  llvm_matchexpr.h  llvm_operators.c  llvm_operators.h  llvm_types.c  llvm_types.h  llvm_utils.c  llvm_utils.h  llvm_values.c  llvm_values.h
src/info/: CMakeLists.txt  info.c  msg.c
src/ir/: CMakeLists.txt  elements.c  rir.c  rir_argument.c  rir_array.c  rir_binaryop.c  rir_block.c  rir_branch.c  rir_call.c  rir_common.c  rir_constant.c  rir_convert.c  rir_expression.c  rir_function.c  rir_global.c  rir_loops.c  rir_ltype.c  rir_object.c  rir_process.c  rir_process_cond.c  rir_process_match.c  rir_strmap.c  rir_type.c  rir_typedef.c  rir_types_list.c  rir_unaryop.c  rir_utils.c  rir_value.c  rir_variable.c
src/ir/parser/: CMakeLists.txt  rirparser.c  rirtoken.c  rirtoken_htable.gperf  rparse_binaryop.c  rparse_blocks.c  rparse_expressions.c  rparse_fndef.c  rparse_functions.c  rparse_functions.h  rparse_global.c  rparse_global.h  rparse_typedef.c  rparse_utils.c  rparse_value.c
src/lexer/: CMakeLists.txt  common.h  lexer.c  tokens.c  tokens_htable.gperf
src/ownership/: CMakeLists.txt  ow_debug.h  ow_edge.c  ow_edge.h  ow_graph.c  ow_graph.h  ow_graphviz.c  ow_graphviz.h  ow_node.c  ow_node.h  ownership.c
src/parser/: CMakeLists.txt  data.c  file.c  function.c  generics.c  identifier.c  offset.c  parser.c  parser_common.c  string.c  tokens.c  type.c
src/parser/recursive_descent/: CMakeLists.txt  arr.c  arr.h  arrayref.c  arrayref.h  block.c  block.h  common.h  core.c  expression.c  expression.h  forexpr.c  forexpr.h  function.c  function.h  generics.c  generics.h  identifier.c  identifier.h  ifexpr.c  ifexpr.h  import.c  import.h  matchexpr.c  matchexpr.h  module.c  module.h  type.c  type.h  typeclass.c  typeclass.h  vardecl.c  vardecl.h
src/serializer/: CMakeLists.txt  astprinter.c  astprinter.h  serializer.c
src/types/: CMakeLists.txt  builtin_types_htable.gperf  builtin_types_htable.h  elementary_types_htable.gperf  type.c  type_arr.c  type_builtin.c  type_comparisons.c  type_creation.c  type_elementary.c  type_function.c  type_operators.c  type_utils.c
src/utils/: CMakeLists.txt  common_strings.c  data.c  string_set.c  traversal.c
stdlib/: io.rf
test/: CMakeLists.txt  Dockerfile  test_input_base.c  test_main.c  testsupport.c  testsupport.h  testsupport_front.c  testsupport_front.h
test/analyzer/: CMakeLists.txt  test_modules.c  test_string_table.c  test_symbol_table.c  test_typecheck.c  test_typecheck_arr.c  test_typecheck_conversion.c  test_typecheck_forexpr.c  test_typecheck_functions.c  test_typecheck_matchexpr.c  test_typecheck_operators.c  test_typecheck_typeclasses.c  testsupport_analyzer.c  testsupport_analyzer.h
test/end_to_end/: CMakeLists.txt  test_end_to_end_basic.c  test_end_to_end_modules.c  testsupport_end_to_end.c  testsupport_end_to_end.h
test/lexer/: CMakeLists.txt  test_lexer.c  testsupport_lexer.c  testsupport_lexer.h
test/parser/: CMakeLists.txt  test_parser_base.c  test_parser_block.c  test_parser_expressions.c  test_parser_forexpr.c  test_parser_function.c  test_parser_generics.c  test_parser_identifier.c  test_parser_ifexpr.c  test_parser_matchexpr.c  test_parser_misc.c  test_parser_modules.c  test_parser_operators.c  test_parser_typeclass.c  test_parser_typedesc.c  testsupport_parser.c  testsupport_parser.h
test/rir/: CMakeLists.txt  test_finalized_ast.c  test_ownership.c  test_parsing_rir.c  test_rir_creation.c  test_rir_end_to_end.c  test_rir_misc.c  test_rir_types.c  testsupport_rir.c  testsupport_rir.h  testsupport_rir_compare.c  testsupport_rir_compare.h
test/rir/creation/: CMakeLists.txt  test_create_simple.c
test/types/: CMakeLists.txt  test_types.c  test_typeset.c
(+74 files in other folders)
