add_subdirectory(analyzer)
add_subdirectory(ast)
add_subdirectory(backend)
add_subdirectory(info)
add_subdirectory(ir)
add_subdirectory(lexer)
add_subdirectory(ownership)
add_subdirectory(parser)
add_subdirectory(serializer)
add_subdirectory(types)
add_subdirectory(utils)

target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/compiler.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/compiler_args.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/front_ctx.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inpfile.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inplocation.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inpoffset.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/inpstr.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/main.c")
target_sources(refu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/module.c")
